--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,4 +1,3 @@
-@import "bootstrap/scss/bootstrap";
 @import '/resources/scss/variables.scss';
 
 * {
@@ -7,12 +6,65 @@
   box-sizing: border-box;
 }
 
+$maxwidth: 1440px;
+$fullscreen-padding: 0 40px;
+$smallscreen-padding: 0 20px;
+
+/*
+  *
+  * Header
+  *
+*/
+
 header {
   position: sticky;
   top: 0;
-  
-  .navbar-nav {
-    gap: 15px;
-  }
+  background-color: #fff;
 
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+
+  z-index: 2000;
+  max-width: $maxwidth;
+  margin: 0 auto;
+  padding: $fullscreen-padding;
+
+  
 }
+
+@media screen and (max-width: 480px) {
+  header {
+    padding: $smallscreen-padding;
+  }
+}
+
+/*
+  *
+  * Main
+  *
+*/
+
+main {
+  width: 100%;
+  background-color: $gray-200;
+  min-height: 100vh;
+
+  & > section.main-content {
+    max-width: $maxwidth;
+    width: 100%;
+    margin: 0 auto;
+    padding: $fullscreen-padding;
+    background-color: #fff;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  main > section{
+    padding: $smallscreen-padding;
+  }
+}
+
+/*
+  *
+  * Footer
+  *
+*/
