--- a/resources/scss/estudos-laravel.scss
+++ b/resources/scss/estudos-laravel.scss
@@ -1,17 +1,22 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.2.0/github-markdown-light.min.css');
 
-article.estudos-content-main {
-  width: 100%;
-  min-height: 100vh;
+.banner {
+  height: 400px;
   display: flex;
+  align-items: center;
   justify-content: center;
-  background-color: #c6c6c6;
 
-  section {
-    max-width: 1280px;
-    padding: 0 40px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    background-color: #fff;
+  background-image: url("https://images.unsplash.com/photo-1521185496955-15097b20c5fe?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1350&q=80");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  
+  h1 {
+    color: #fff;
+    backdrop-filter: blur(4px);
+    padding: 40px 80px;
+    text-transform: uppercase;
+    font-weight: bolder;
   }
-
 }
+
