--- a/resources/scss/eventos/show.scss
+++ b/resources/scss/eventos/show.scss
@@ -1,9 +1,21 @@
 @use "../variables.scss" as *;
 
+.main-content {
+	i {
+		color: $primary;
+	}
+
+	h1 {
+		font-weight: bold;
+	}
+}
+
 .banner-evento {
 	position: relative;
-	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 	height: 300px;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
 
 	img {
 		width: 100%;
@@ -26,8 +38,8 @@
 	}
 }
 
-@media screen and (max-width: 768px) {
-	.main-fullsize {
-		display: none;
-	}
+.items-evento {
+	padding-left: 0;
+	list-style: none;
+	
 }
