--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -24,13 +24,28 @@ header {
   top: 0;
   background-color: #fff;
 
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  // box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  border-bottom: solid rgba(0, 0, 0, 0.10) 1px;
 
   z-index: 2000;
   max-width: $maxwidth;
   margin: 0 auto;
   padding: $fullscreen-header-padding;
 
+  // li.nav-item {
+  //   position: relative;
+  //   a {
+  //     transition: outline 0.3s;
+  //     &:hover ::after {
+  //       position: absolute;
+  //       bottom: 0;
+  //       content: "";
+  //       width: 100%;
+  //       height: 1px;
+  //       background-color: #000;
+  //     }
+  //   }
+  // }
   
 }
 
